# ImagePro

./: 2DFeaturesTools.qml  AdvancedTools.qml  BasicTools.qml  CMakeLists.txt  FileParam.qml  FunctionsParam.qml  FunctionsTools.qml  HistogramsParam.qml  LeftView.qml  Main.qml  MainMenu.qml  MainToolBar.qml  TransformationsTools.qml  app_tools.cpp  app_tools.h  basic_operation.cpp  basic_operation.h  image_function.cpp  image_function.h  imagecontroller.cpp  imagecontroller.h  imageinfo.cpp  imageinfo.h  imageprovider.cpp  imageprovider.h  main.cpp  style.cpp  style.h
basic/: ColorDetection.qml  Convert.qml  ExtractLines.qml  InRange.qml  Morphology.qml  Smoothing.qml  TemplateMatching.qml
contours/: DrawShape.qml
features2D/: AKAZE.qml  FeaturesDetecting.qml  FeaturesMatching.qml  SIFT.qml  ShiTomasi.qml
transformations/: Affine.qml  Canny.qml  Crop.qml  HoughLine.qml  Remap.qml  Rotation.qml  Sobel.qml
